# create-ai-app

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/create_ai_app/: cli.py  models.py  scaffold.py
src/create_ai_app/installers/: _utils.py  agent.py  api.py  auth.py  base.py  batch.py  database.py  docker.py  frontend.py  logging.py  monorepo.py  precommit.py  teams.py
src/create_ai_app/skills/new-app/: SKILL.md
