[project]
name = "create-ai-app"
version = "0.1.0"
description = "Interactive Python AI/GenAI project scaffolding CLI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12.0",
    "questionary>=2.0.1",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
]

[project.scripts]
new-ai-app = "create_ai_app.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/create_ai_app"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
